# lib/api-spec/openapi.yaml
@@ -744,6 +744,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: createdById
+          in: query
+          schema:
+            type: integer
         - name: departmentId
           in: query
           schema:
